--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ Django==4.2.3
 django-js-asset==2.0.0
 dnspython==2.3.0
 docutils==0.20.1
-markdown2==2.4.8
-Pillow==9.5.0
+markdown2==2.4.9
+Pillow==10.0.0
 py3-validate-email==1.0.5.post1
 requests==2.31.0
 django-appointment==1.0.0
 django-payment-manager==1.0.1
+python-dotenv~=1.0.0
