--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,15 @@ Django==4.2.8
 django-js-asset==2.2.0
 dnspython==2.4.2
 docutils==0.20.1
-markdown2==2.4.11
-Pillow==10.1.0
+markdown2==2.4.12
+Pillow==10.2.0
 py3-validate-email==1.0.5.post1
 requests==2.31.0
-django-appointment==2.1.1
+django-appointment==3.0.0
 django-payment-manager==1.0.1
 python-dotenv~=1.0.0
 django-simple-history~=3.4.0
 xhtml2pdf~=0.2.13
 pypdf2~=3.0.1
-endesive~=2.16
+endesive==2.17.0
 cryptography~=41.0.7
