--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Django==4.2.8
+Django==4.2.9
 django-js-asset==2.2.0
-dnspython==2.4.2
+dnspython==2.5.0
 docutils==0.20.1
 markdown2==2.4.12
 Pillow==10.2.0
@@ -10,7 +10,7 @@ django-appointment==3.0.1
 django-payment-manager==1.0.1
 python-dotenv~=1.0.0
 django-simple-history~=3.4.0
-xhtml2pdf~=0.2.13
+xhtml2pdf==0.2.14
 pypdf2~=3.0.1
 endesive==2.17.0
 cryptography~=41.0.7
