--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 Django==4.2.10
 django-js-asset==2.2.0
-dnspython==2.6.0rc1
+dnspython==2.5.0
 docutils==0.20.1
 markdown2==2.4.12
 Pillow==10.2.0
 py3-validate-email==1.0.5.post1
 requests==2.31.0
-django-appointment==3.0.1
+django-appointment==3.1.1
 django-payment-manager==1.0.1
-python-dotenv~=1.0.0
+python-dotenv==1.0.1
 django-simple-history~=3.4.0
-xhtml2pdf==0.2.14
+xhtml2pdf==0.2.15
 pypdf2~=3.0.1
 endesive==2.17.0
-cryptography~=42.0.0
+cryptography~=42.0.2
 django-simple-captcha==0.6.0
