--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ pypdf2~=3.0.1
 endesive==2.19.2
 cryptography==46.0.3
 django-simple-captcha==0.6.2
+git+https://git.ksol.io/karolyi/py3-validate-email@v1.0.12
