--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python-dateutil
 Django==5.2.7
 django-js-asset==3.1.2
 dnspython==2.8.0
@@ -11,7 +12,7 @@ django-payment-manager==1.0.1
 python-dotenv==1.2.1
 django-simple-history==3.10.1
 xhtml2pdf==0.2.17
-pypdf2~=3.0.1
+pypdf>=6.4.0
 endesive==2.19.2
 cryptography==46.0.3
 django-simple-captcha==0.6.2
